[project]
name = "pulsetrace"
version = "0.1.0"
description = "XAI application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.7.0",
    "keras>=3.9.0",
    "lime>=0.2.0.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "pillow>=9.0",
    "scikit-image>=0.19",
    "pydantic>=2.0",
    "pyyaml>=6.0.2",
    "scikit-learn>=1.6.1",
    "shap>=0.47.0",
    "tensorflow>=2.18.0",
    "torch>=2.6.0",
    "sktime>=0.40.1",
    "transformers>=4.40.0",
]

[project.scripts]
pulsetrace = "pulsetrace.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "datasets>=2.19.0",
]
